--- a/secciones/inicio.html
+++ b/secciones/inicio.html
@@ -3,8 +3,7 @@
   <div class="hero-content">
       <h1 class="hero-title">Ander Huallpa</h1>
       <p class="hero-subtitle">
-          <strong class="gradient-text">Project Management Professional</strong>
-          especializado en gestión de proyectos mineros e industriales
+          Mi visión es convertirme en un <strong class="gradient-text">ingeniero Civil especializado en gestión de proyectos.</strong>
       </p>
   </div>
 </section>
@@ -13,7 +12,7 @@
 <section class="card">
   <h2 class="section-title">Portafolio de Conocimiento en Project Management</h2>
   <p class="section-text">
-      Este sitio representa mi <strong>compilación de conocimiento especializado</strong> en gestión de proyectos mineros,
+      Este sitio representa mi <strong>compilación de conocimiento especializado</strong> en gestión de proyectos,
       basado en experiencia práctica en PMO y el estudio riguroso de metodologías de la industria.
   </p>
 
@@ -22,21 +21,21 @@
           <div class="feature-icon">🏗️</div>
           <h3 class="feature-title">Experiencia Práctica en PMO</h3>
           <p class="feature-description">
-              +6 meses en Corporación Aceros Arequipa gestionando proyectos de CAPEX +3.0MM USD con control de líneas base y EVM.
+              +6 meses en una PMO gestionando proyectos de CAPEX +2.0MM USD con control de líneas base y EVM.
           </p>
       </div>
       <div class="feature-card">
           <div class="feature-icon">📚</div>
           <h3 class="feature-title">Conocimiento Sistematizado</h3>
           <p class="feature-description">
-              Metodologías de Project Management System aplicadas específicamente a proyectos mineros e industriales.
+              Fuerte base en Metodologías de Project Management System aplicadas a proyectos de construcción, industriales y mineros.
           </p>
       </div>
       <div class="feature-card">
           <div class="feature-icon">⚡</div>
           <h3 class="feature-title">Herramientas de Control</h3>
           <p class="feature-description">
-              Dominio de Power BI, MS Project, EVM, curvas S y sistemas de control integrado de proyectos.
+              Dominio de Excel Avanzado, Power BI y MS Project intermedio.
           </p>
       </div>
   </div>
@@ -51,7 +50,7 @@
       <article class="project-card">
           <h4 class="project-title">Vías internas – Tren Laminador 3</h4>
           <p class="project-meta">
-              Corporación Aceros Arequipa · Proyecto de pavimentos y urbanismo
+              Corporación Aceros Arequipa - CAPEX 1.5MM USD
           </p>
 
           <ul class="project-points">
@@ -72,13 +71,12 @@
       <article class="project-card">
           <h4 class="project-title">Cerramiento metálico – Nave de Laminación 2</h4>
           <p class="project-meta">
-              Corporación Aceros Arequipa · Envolvente y cerramiento industrial
+              Corporación Aceros Arequipa · - CAPEX 0.3MM USD
           </p>
 
           <ul class="project-points">
-              <li>Soporte en el seguimiento de montaje de paneles metálicos y coordinación de accesos y maniobras.</li>
+              <li>Soporte en el seguimiento de montaje de cerramiento metálico y coordinación de accesos y maniobras.</li>
               <li>Control básico de frentes de trabajo y secuencia constructiva para minimizar retrabajos.</li>
-              <li>Verificación fotográfica de avances para reportes de proyecto y soporte a valorizaciones.</li>
           </ul>
 
           <div class="project-image-wrap">
@@ -167,4 +165,5 @@
           </button>
       </div>
   </div>
+
 </section>
