--- a/secciones/inicio.html
+++ b/secciones/inicio.html
@@ -21,14 +21,14 @@
           <div class="feature-icon">🏗️</div>
           <h3 class="feature-title">Experiencia Práctica en PMO</h3>
           <p class="feature-description">
-              +6 meses en una PMO gestionando proyectos de CAPEX +2.0MM USD con control de líneas base y EVM.
+              +6 meses de experiencia en una PMO, +10 proyectos de ingeniería, control de líneas base, EVM y gestión de stakeholders.
           </p>
       </div>
       <div class="feature-card">
           <div class="feature-icon">📚</div>
           <h3 class="feature-title">Conocimiento Sistematizado</h3>
           <p class="feature-description">
-              Fuerte base en Metodologías de Project Management System aplicadas a proyectos de construcción, industriales y mineros.
+              Compilación de conocimientos y experiencias en gestión de proyectos y formación continua en metodologías PMI.
           </p>
       </div>
       <div class="feature-card">
@@ -54,9 +54,9 @@
           </p>
 
           <ul class="project-points">
-              <li>Apoyo en el control y seguimiento de cronograma y costos de más de 20,000 m² de vías internas.</li>
+              <li>Apoyo en el control y seguimiento de cronograma y costos de más de 15,000 m² de vías internas.</li>
               <li>Coordinación con contratistas y área de proyectos para levantar interferencias y restricciones.</li>
-              <li>Seguimiento a avances físicos vs. valorizaciones para mantener desviaciones bajo control.</li>
+              <li>Seguimiento de avances físicos vs. valorizaciones para control de desviaciones.</li>
           </ul>
 
           <div class="project-image-wrap">
@@ -75,8 +75,8 @@
           </p>
 
           <ul class="project-points">
-              <li>Soporte en el seguimiento de montaje de cerramiento metálico y coordinación de accesos y maniobras.</li>
-              <li>Control básico de frentes de trabajo y secuencia constructiva para minimizar retrabajos.</li>
+              <li>>Lideré la implementación de 3,000 m² de cerramiento metálico desde diseño hasta ejecución.</li>
+              <li>Gestión de stakeholders, kick-off meeting y control de avance.</li>
           </ul>
 
           <div class="project-image-wrap">
@@ -167,3 +167,4 @@
   </div>
 
 </section>
+
