--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Ander Huallpa - Engineering & Project Management</title>
+    <title>Ander Huallpa - Bachiller de Ingeniería Civil</title>
     <meta name="theme-color" content="#2563eb">
     <meta property="og:title" content="Ander Huallpa - Engineering & Project Management">
     <meta property="og:description" content="Portafolio profesional especializado en gestión de proyectos mineros e industriales">
@@ -235,4 +235,5 @@
     <script src="loader.js"></script>
 </body>
 </html>
+
 
