--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ander Huallpa - Bachiller de Ingeniería Civil</title>
     <meta name="theme-color" content="#2563eb">
-    <meta property="og:title" content="Ander Huallpa - Engineering & Project Management">
+    <meta property="og:title" content="Ander Huallpa - Bachiller de Ingeniería Civil">
     <meta property="og:description" content="Portafolio profesional especializado en gestión de proyectos mineros e industriales">
     <link rel="stylesheet" href="estilos.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -23,7 +23,7 @@
                 </a>
                 <div class="header-text">
                     <h2 class="sidebar-title">Ander Huallpa</h2>
-                    <h3 class="sidebar-subtitle">Engineering & Project Management</h3>
+                    <h3 class="sidebar-subtitle">Bachiller de Ingeniería Civil</h3>
                 </div>
             </div>
 
@@ -235,5 +235,6 @@
     <script src="loader.js"></script>
 </body>
 </html>
+
 
 
