--- a/secciones/inicio.html
+++ b/secciones/inicio.html
@@ -41,6 +41,58 @@
   </div>
 </section>
 
+
+<!-- ============================= -->
+<!-- DASHBOARD SECTION -->
+<!-- ============================= -->
+
+<section class="card">
+  <h2 class="section-title">Project Dashboards & Analytics</h2>
+  <p class="section-text">
+    Visualizaciones técnicas basadas en control de costos, cronograma y desempeño por WBS. Cada dashboard resume dimensiones clave del Project Controls.
+  </p>
+
+  <!-- DASHBOARD 1 -->
+  <article class="project-card">
+    <h3 class="project-title">Integrated Cost & Schedule Performance Dashboard</h3>
+    <p class="project-meta">Curvas PV–EV–AC · CPI/SPI · Forecast</p>
+    <p class="project-description">
+      Dashboard que consolida desempeño de costo y cronograma mediante Earned Value Management, índices de rendimiento y proyección del programa.
+    </p>
+    <div class="project-image-wrap">
+      <img src="assets/dashboards/Dashboard-1.jpg" alt="Integrated Cost & Schedule Dashboard" class="project-image">
+    </div>
+  </article>
+
+  <!-- DASHBOARD 2 -->
+  <article class="project-card">
+    <h3 class="project-title">Cost Distribution & Accumulated Curve by WBS</h3>
+    <p class="project-meta">WBS Level 1 · WBS Level 2 · Monthly Accumulated</p>
+    <p class="project-description">
+      Distribución mensual de costos por paquetes de trabajo y curva acumulada, diseñada para análisis detallado del desempeño financiero estructurado en WBS.
+    </p>
+    <div class="project-image-wrap">
+      <img src="assets/dashboards/Dashboard-2.jpg" alt="WBS Cost Dashboard" class="project-image">
+    </div>
+  </article>
+
+  <!-- DASHBOARD 3 -->
+  <article class="project-card">
+    <h3 class="project-title">Pareto Analysis of Cost Commitments</h3>
+    <p class="project-meta">Top-Cost Items · 80/20 Analysis</p>
+    <p class="project-description">
+      Análisis Pareto de compromisos y pagos que identifica las partidas que concentran el mayor impacto financiero del proyecto.
+    </p>
+    <div class="project-image-wrap">
+      <img src="assets/dashboards/Dashboard-3.jpg" alt="Pareto Cost Dashboard" class="project-image">
+    </div>
+  </article>
+
+</section>
+
+
+
+
 <!-- Proyectos destacados -->
 <div class="card">
   <h3 class="section-subtitle">Experiencia Aplicada en Proyectos</h3>
@@ -167,4 +219,5 @@
   </div>
 
 </section>
+
 
