--- a/secciones/inicio.html
+++ b/secciones/inicio.html
@@ -49,8 +49,9 @@
 <section class="card">
   <h2 class="section-title">Project Dashboards & Analytics</h2>
   <p class="section-text">
-    Visualizaciones técnicas basadas en control de costos, cronograma y desempeño por WBS. Cada dashboard resume dimensiones clave del Project Controls.
+    Visualizaciones técnicas basadas en control de costos, cronograma y desempeño por WBS. Cada dashboard resume dimensiones clave del Project Controls conforme a los principios del libro <em>Project Management for Mining</em> —Chapter 23 (Earned Value Management), Chapter 24 (Project Controls) y Chapter 25 (Reports and Progress Reviews).
   </p>
+
 
   <!-- DASHBOARD 1 -->
   <article class="project-card">
@@ -60,7 +61,7 @@
       Dashboard que consolida desempeño de costo y cronograma mediante Earned Value Management, índices de rendimiento y proyección del programa.
     </p>
     <div class="project-image-wrap">
-      <img src="assets/dashboards/Dashboard-1.jpg" alt="Integrated Cost & Schedule Dashboard" class="project-image">
+      <img src="assets/img/Dashboard-1.jpg" alt="Integrated Cost & Schedule Dashboard" class="project-image">
     </div>
   </article>
 
@@ -72,7 +73,7 @@
       Distribución mensual de costos por paquetes de trabajo y curva acumulada, diseñada para análisis detallado del desempeño financiero estructurado en WBS.
     </p>
     <div class="project-image-wrap">
-      <img src="assets/dashboards/Dashboard-2.jpg" alt="WBS Cost Dashboard" class="project-image">
+      <img src="assets/img/Dashboard-2.jpg" alt="WBS Cost Dashboard" class="project-image">
     </div>
   </article>
 
@@ -84,7 +85,7 @@
       Análisis Pareto de compromisos y pagos que identifica las partidas que concentran el mayor impacto financiero del proyecto.
     </p>
     <div class="project-image-wrap">
-      <img src="assets/dashboards/Dashboard-3.jpg" alt="Pareto Cost Dashboard" class="project-image">
+      <img src="assets/img/Dashboard-3.jpg" alt="Pareto Cost Dashboard" class="project-image">
     </div>
   </article>
 
@@ -219,5 +220,6 @@
   </div>
 
 </section>
+
 
 
