--- a/secciones/inicio.html
+++ b/secciones/inicio.html
@@ -13,34 +13,8 @@
   <h2 class="section-title">Portafolio de Conocimiento en Project Management</h2>
   <p class="section-text">
       Este sitio representa mi <strong>compilación de conocimiento especializado</strong> en gestión de proyectos,
-      basado en experiencia práctica en PMO y el estudio riguroso de metodologías de la industria.
+      basado +6 meses de experiencia en una PMO, involucrado en +10 proyectos de ingeniería y el estudio riguroso de metodologías PMI y AACE.
   </p>
-
-  <div class="features-grid">
-      <div class="feature-card">
-          <div class="feature-icon">🏗️</div>
-          <h3 class="feature-title">Experiencia Práctica en PMO</h3>
-          <p class="feature-description">
-              +6 meses de experiencia en una PMO, +10 proyectos de ingeniería, control de líneas base, EVM y gestión de stakeholders.
-          </p>
-      </div>
-      <div class="feature-card">
-          <div class="feature-icon">📚</div>
-          <h3 class="feature-title">Conocimiento Sistematizado</h3>
-          <p class="feature-description">
-              Compilación de conocimientos y experiencias en gestión de proyectos y formación continua en metodologías PMI.
-          </p>
-      </div>
-      <div class="feature-card">
-          <div class="feature-icon">⚡</div>
-          <h3 class="feature-title">Herramientas de Control</h3>
-          <p class="feature-description">
-              Dominio de Excel Avanzado, Power BI y MS Project intermedio.
-          </p>
-      </div>
-  </div>
-</section>
-
 
 <!-- ============================= -->
 <!-- DASHBOARD SECTION -->
@@ -49,9 +23,8 @@
 <section class="card">
   <h2 class="section-title">Project Dashboards & Analytics</h2>
   <p class="section-text">
-    Visualizaciones técnicas basadas en control de costos, cronograma y desempeño por WBS. Cada dashboard resume dimensiones clave del Project Controls conforme a los principios del libro <em>Project Management for Mining</em> —Chapter 23 (Earned Value Management), Chapter 24 (Project Controls) y Chapter 25 (Reports and Progress Reviews).
+    Acontinuación presento algunos dashboard que he desarrollado en POWER BI, tomando como referencias el libro <em>Project Management for Mining</em> —Chapter 23 (Earned Value Management), Chapter 24 (Project Controls) y Chapter 25 (Reports and Progress Reviews).
   </p>
-
 
   <!-- DASHBOARD 1 -->
   <article class="project-card">
@@ -220,6 +193,7 @@
   </div>
 
 </section>
+
 
 
 
