--- a/index.html
+++ b/index.html
@@ -49,8 +49,13 @@
                                     Chapter 5 – Scoping Evaluation
                                 </a>
                             </li>
-                            <li><a href="#" style="color:#64748b;font-style:italic;">Chapter 2 – Coming Soon</a></li>
-                            <li><a href="#" style="color:#64748b;font-style:italic;">Chapter 3 – Coming Soon</a></li>
+                            <li>
+                                <a href="#"
+                                   data-section="opportunity/Chapter 6 Managment Review.html"
+                                   onclick="loadSection('opportunity/Chapter 6 Managment Review.html'); return false;">
+                                    Chapter 6 – Managment Review
+                                </a>
+                            </li>
                         </ul>
                     </li>
 
@@ -222,7 +227,7 @@
                         © 2025 · Portafolio Profesional · Ander Huallpa
                     </p>
                     <p style="font-size:0.8rem;color:var(--gray-500);">
-                        Engineering & Project Management · Especializado en Gestión de Proyectos Mineros
+                        Civil Engineering & Project Management · Especializado en Gestión de Proyectos
                     </p>
                 </div>
             </footer>
@@ -235,6 +240,7 @@
     <script src="loader.js"></script>
 </body>
 </html>
+
 
 
 
