--- a/index.html
+++ b/index.html
@@ -65,12 +65,18 @@
                         <ul class="nav-submenu">
                             <li>
                                 <a href="#"
-                                   data-section="viability/chapter1.html"
-                                   onclick="loadSection('viability/chapter1.html'); return false;">
-                                    Chapter 1 – Feasibility Analysis
+                                   data-section="viability/Chapter 7 Prefeasibility Study.html"
+                                   onclick="loadSection('viability/Chapter 7 Prefeasibility Study.html'); return false;">
+                                    Chapter 7 – Prefeasibility Study
                                 </a>
                             </li>
-                            <li><a href="#" style="color:#64748b;font-style:italic;">Chapter 2 – Coming Soon</a></li>
+                            <li>
+                                <a href="#"
+                                   data-section="viability/Chapter 8 Feasibility Study.html"
+                                   onclick="loadSection('viability/Chapter 8 Feasibility Study.html'); return false;">
+                                    Chapter 8 - Feasibility Study
+                                </a>
+                            </li>                            
                         </ul>
                     </li>
 
@@ -240,6 +246,7 @@
     <script src="loader.js"></script>
 </body>
 </html>
+
 
 
 
